pkl-core/src/test/files/LanguageSnippetTests/input/errors/userDefinedTypeParameter1.pkl
class Box<A> {
  element: A
}